flux/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: single-pane
spec:
  selector:
    matchLabels:
      app: single-pane
  template:
    metadata:
      labels:
        app: single-pane
    spec:
      containers:
      - name: single-pane
        image: bojackson30/single-pane:three
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /dkp/single-pane/api/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /dkp/single-pane/api/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 80
