flux/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: single-pane
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    http:
      paths:
      - path: /dkp/single-pane
        pathType: ImplementationSpecific
        backend:
          service:
            name: single-pane
            port:
              number: 80
